--- a/app/src/main/res/navigation/nav_main.xml
+++ b/app/src/main/res/navigation/nav_main.xml
@@ -55,6 +55,9 @@
         <action
             android:id="@+id/action_homeFragment_to_contactsHomeFragment"
             app:destination="@id/contactsHomeFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_chatFragment"
+            app:destination="@id/chatFragment" />
     </fragment>
     <navigation android:id="@+id/nav_userAuth"
         app:startDestination="@id/startFragment">
@@ -143,4 +146,16 @@
         app:destination="@id/homeFragment"
         app:popUpTo="@id/homeFragment"
         app:popUpToInclusive="true" />
+    <fragment
+        android:id="@+id/chatFragment"
+        android:name="org.jam.jmessenger.ui.chats.ChatFragment"
+        android:label="chat_fragment"
+        tools:layout="@layout/chat_fragment" >
+        <argument
+            android:name="userUID"
+            app:argType="string" />
+        <argument
+            android:name="friendUID"
+            app:argType="string" />
+    </fragment>
 </navigation>
