--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -60,6 +60,19 @@
         <item name="backgroundTint">@color/acceptColor</item>
         <item name="android:textSize">10dp</item>
     </style>
+
+    <style name="JPrimaryButton_SendMessage" parent="Widget.MaterialComponents.Button">
+        <item name="android:textColor">@color/primaryTextColor</item>
+        <item name="backgroundTint">@color/secondaryDarkColor</item>
+        <item name="android:insetTop">0dp</item>
+        <item name="android:insetBottom">0dp</item>
+        <item name="shapeAppearanceOverlay">@style/ShapeAppearanceOverlay.MyApp.Button.Circle</item>
+    </style>
+
+    <style name="ShapeAppearanceOverlay.MyApp.Button.Circle" parent="">
+        <item name="cornerFamily">rounded</item>
+        <item name="cornerSize">50%</item>
+    </style>
     <!--Button End Region-->
 
 
@@ -79,6 +92,13 @@
 
     <style name="JTextEditHelper" parent="Text_Subtitle2">
         <item name="android:paddingLeft">8dp</item>
+    </style>
+
+    <style name="JTextEdit_SendMessage" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+        <item name="android:background">@drawable/textedit_background_round</item>
+        <item name="android:backgroundTint">@color/secondaryDarkColor</item>
+        <item name="android:translationY">0dp</item>
+        <item name="android:textAppearance">@style/Text_Subtitle2</item>
     </style>
     <!--TextEdit End Region-->
 
