--- a/app/src/main/res/layout/chat_fragment.xml
+++ b/app/src/main/res/layout/chat_fragment.xml
@@ -51,7 +51,8 @@
                 android:layout_margin="0dp"
                 android:layout_weight="0"
                 android:hint="Send Message"
-                android:inputType="textMultiLine" />
+                android:inputType="textMultiLine"
+                android:padding="8dp" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
